--- a/config.json
+++ b/config.json
@@ -14,6 +14,8 @@
         "url": "wordpress_url",
         "user": "username",
         "password": "password",
+        "wp_audio_path": "wp-content/audio_sermons",
+        "local_audio_path": "/var/www/httpdocs/wp-content",
         "category_id": 1,
         "video_width": "540",
         "video_height": "304"
